--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -10,58 +10,68 @@
     <script src="http://modernizr.com/downloads/modernizr.js"></script>
 </head>
 <body>
-<header>
-    <form action="#" class="logout">
-        <input type="submit" name="logout" id="logout" value="logout">
-    </form>
-    <img>
-    <h1>User real name</h1>
-    <h2>User username</h2>
-    <p class="status">User status</p>
-    <p class="error template">Error message here</p>
-</header>
 
-<div id="left">
+    <div id="inici">
+        <form action="#" class="novaEnquesta">
+            <h1>Nova enquesta</h1>
+            <input type="submit">
+        </form>
+    </div>
 
-<section id="chirp">
-    <h1>Say something...</h1>
-    <form class="chirp">
-        <textarea></textarea>
-        <input type="submit" value="Chirp">
-    </form>
-</section>
+    <div id="principal" class="template">    
+        <header>
+            <form action="#" class="logout">
+                <input type="submit" name="logout" id="logout" value="logout">
+            </form>
+            <img>
+            <h1>User real name</h1>
+            <h2>User username</h2>
+            <p class="status">User status</p>
+            <p class="error template">Error message here</p>
+        </header>
 
-<menu class="main">
-    <a href="#">Chirps</a>
-    <a href="#">Following</a>
-    <a href="#">Followers</a>
-</menu>
+        <div id="left">
 
-<section id="copyright">
-    <p>Your awesome copyright statement goes here.</p>
-</section>
+        <section id="chirp">
+            <h1>Say something...</h1>
+            <form class="chirp">
+                <textarea></textarea>
+                <input type="submit" value="Chirp">
+            </form>
+        </section>
 
-</div>
+        <menu class="main">
+            <a href="#">Chirps</a>
+            <a href="#">Following</a>
+            <a href="#">Followers</a>
+        </menu>
 
-<section id="content">
-    <h1>Chirps</h1>
-    <ul id="chirps">
-        <li id="chirpTemplate" class="template">
-            <date>date</date>
-            <img src="img/avatar2.png">
-            <address><span class="name">Name</span><span class="username">@username</span></address>
-            <p>Message</p>
-            <menu>
-                <a href="#">Reply</a>
-                <a href="#">Retweet</a>
-                <a href="#">Favorite</a>
-            </menu>
-        </li>
-    </ul>
-</section>
+        <section id="copyright">
+            <p>Your awesome copyright statement goes here.</p>
+        </section>
 
-<footer>
+        </div>
 
-</footer>
+        <section id="content">
+            <h1>Chirps</h1>
+            <ul id="chirps">
+                <li id="chirpTemplate" class="template">
+                    <date>date</date>
+                    <img src="img/avatar2.png">
+                    <address><span class="name">Name</span><span class="username">@username</span></address>
+                    <p>Message</p>
+                    <menu>
+                        <a href="#">Reply</a>
+                        <a href="#">Retweet</a>
+                        <a href="#">Favorite</a>
+                    </menu>
+                </li>
+            </ul>
+        </section>
+
+        <footer>
+
+        </footer>
+    </div>
 </body>
 </html>
