--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -29,8 +29,23 @@
                 <input type="create" name="inDes" id="inDes">
                 <h2>Fins a</h2>
                 <input type="create" name="inFins" id="inFins">
-                <form action="#" class="enviarNovaEnquesta">
+                <form action="#" class="enviarNova
+                Enquesta">
                     <input type="submit" value="Crear">
+                </form>
+            </ne>
+            <form action="#" class="modificarFormulari">
+                <input type="submit" value="Modificar" id="modificarFormulariButton">
+            </form>
+            <ne id = "formulariEnquestaModificar" class = "template">
+                <h2>Títol</h2>
+                <input type="create" name="inTitolM" id="inTitolM">
+                <h2>Des de</h2>
+                <input type="create" name="inDesM" id="inDesM">
+                <h2>Fins a</h2>
+                <input type="create" name="inFinsM" id="inFinsM">
+                <form action="#" class="enviarEnquestaModificada">
+                    <input type="submit" value="Modificar">
                 </form>
             </ne>
             <p class="error template">Error message here</p>
