POST enquesta i save DAO

--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -27,13 +27,12 @@
             <div id="formulariEnquesta" class="template">
                 <form action="#" class="creaEnquesta">                
                     <h2>Títol</h2>
-                    <input type="create" name="inTitol" id="inTitol">
+                    <input type="text" class="inTitol" name="inTitol" id="inTitol">
                     <h2>Des de</h2>
-                    <input type="create" name="inDes" id="inDes">
+                    <input type="text" class="inDes"  name="inDes" id="inDes">
                     <h2>Fins a</h2>
-                    <input type="create" name="inFins" id="inFins">
-                    <form action="#" class="enviarNova
-                    Enquesta">
+                    <input type="text" class="inFins"  name="inFins" id="inFins">
+                    
                     <input type="submit" value="Crea">
                 </form>
             </div>
