--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -38,9 +38,9 @@
                     <label for="inTitol">Títol</label>
                     <input type="text" class="titol" name="titol" id="titol">
                     <label for="dataInici">Des de</label>
-                    <input type="text" id="dataInici" name="dataInici"/>
+                    <input type="text" id="dataInici" name="dataInici" class="from"/>
                     <label for="dataFi">Fins a</label>
-                    <input type="text" id="dataFi" name="dataFi"/>
+                    <input type="text" id="dataFi" name="dataFi" class="to"/>
                     
                     <input type="submit" value="Crea">
                 </form>
