--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -57,18 +57,19 @@
                     <label for="getTitolEnq">Id</label>
                     <input type="text" class="titol" name="titol" id="id">
 
-                    <input type="submit" value="Crea">
+                    <input type="submit" value="Cerca">
                 </form>
             </div>
             
             <div id = "veureEnquesta" class = "template">
                 <form action="#" class="veureEnquesta">
                     <h2>Enquesta: </h2>
-                    <input type="create" name="veureTitol" id="veureTitol">
+                    <input type="text" name="veureTitol" id="veureTitol">
                     <h2>Des de</h2>
-                    <input type="create" name="veureDesM" id="veureDesM">
+                    <input type="text" name="veureDesM" id="veureDesM">
                     <h2>Fins a</h2>
-                    <input type="create" name="veureFinsM" id="veureFinsM">
+                    <input type="text" name="veureFinsM" id="veureFinsM">
+                    <input type="submit" value="Modifica">
                 </form>
             </div>
             <p class="error template">Error message here</p>
