modified:   src/main/docroot/css/layout.css 	new file:   src/main/docroot/img/Logo.psd 	new file:   src/main/docroot/img/LogoB.png 	new file:   src/main/docroot/img/LogoW.png 	modified:   src/main/docroot/index.html 	modified:   src/main/docroot/scripts/enquestador.js

--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <img src="img/LogoW.png" class="logo">
     <div id="inici">
         <header>
             <form action="#" class="novaEnquesta">
