--- a/src/main/docroot/index2.html
+++ b/src/main/docroot/index2.html
@@ -25,15 +25,17 @@
     <div id="content">
         <!-- DYNAMIC CONTENT -->
         <section id="sectionContainer">
+            <!--
             <div id="inici">
                 <form action="#">
                     <h1>Benvingut al Enquestador</h1>
-                    <input id="novaEnquesta" type="button" value="Nova enquesta">
+                    <input id="crearEnquesta" type="button" value="Crear enquesta">
                     <hr/>
                     <h1>Get Enquesta</h1>
                     <input id="getEnquesta" type="button" value="Get Enquesta">
                 </form>
             </div>
+            -->
         </section>
         <section class="template">
             <p class="error template">Error message here</p>
