--- a/src/main/docroot/ajax/crearEnquesta.html
+++ b/src/main/docroot/ajax/crearEnquesta.html
@@ -1,16 +1,16 @@
 <div id="formulariEnquesta">
     <form action="#" class="creaEnquesta">
-        <h2>Nova enquesta</h2>
+        <h2>Crear enquesta</h2>
+        <div>
+            <label for="titol">Títol</label>
+            <input type="text" class="titol" name="titol" id="titol">
 
-        <label for="titol">Títol</label>
-        <input type="text" class="titol" name="titol" id="titol">
+            <label for="dataInici">Des de</label>
+            <input type="text" id="dataInici" name="dataInici" class="from"/>
 
-        <label for="dataInici">Des de</label>
-        <input type="text" id="dataInici" name="dataInici" class="from"/>
-
-        <label for="dataFi">Fins a</label>
-        <input type="text" id="dataFi" name="dataFi" class="to"/>
-
+            <label for="dataFi">Fins a</label>
+            <input type="text" id="dataFi" name="dataFi" class="to"/>
+        </div>
         <input type="button" id="tornar" name="tornar" value="Tornar"/>
         <input type="submit" value="Crea">
     </form>
