--- a/src/main/docroot/ajax/inici.html
+++ b/src/main/docroot/ajax/inici.html
@@ -1,7 +1,7 @@
 <div id="inici">
     <form action="#">
         <h1>Benvingut al Enquestador</h1>
-        <input id="novaEnquesta" type="button" value="Nova enquesta">
+        <input id="crearEnquesta" type="button" value="Crear enquesta">
         <hr/>
         <h1>Get Enquesta</h1>
         <input id="getEnquesta" type="button" value="Get Enquesta">
