--- a/src/main/docroot/ajax/getEnquesta.html
+++ b/src/main/docroot/ajax/getEnquesta.html
@@ -1,10 +1,12 @@
 <div id="formulariGetEnquesta">
     <form action="#" class="getEnquesta">
         <h2>Nova enquesta</h2>
+        <div>
+            <label for="getTitolEnq">Id</label>
+            <input type="text" class="titol" name="titol" id="id">
 
-        <label for="getTitolEnq">Id</label>
-        <input type="text" class="titol" name="titol" id="id">
-
-        <input type="submit" value="Cerca">
+            <input type="submit" value="Cerca">
+        </div>
+        <input type="button" id="tornar" name="tornar" value="Tornar"/>
     </form>
 </div>
