--- a/src/main/docroot/ajax/veureEnquesta.html
+++ b/src/main/docroot/ajax/veureEnquesta.html
@@ -1,11 +1,14 @@
 <div id = "veureEnquesta">
     <form action="#" class="veureEnquesta">
         <h2>Enquesta: </h2>
-        <input type="text" name="veureTitol" id="veureTitol">
-        <h2>Des de</h2>
-        <input type="text" name="veureDesM" id="veureDesM">
-        <h2>Fins a</h2>
-        <input type="text" name="veureFinsM" id="veureFinsM">
+        <div>
+            <input type="text" name="veureTitol" id="veureTitol">
+            <h2>Des de</h2>
+            <input type="text" name="veureDesM" id="veureDesM">
+            <h2>Fins a</h2>
+            <input type="text" name="veureFinsM" id="veureFinsM">
+        </div>
         <input type="submit" value="Modifica">
+        <input type="button" id="tornar" name="tornar" value="Tornar"/>
     </form>
 </div>
