--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -82,7 +82,7 @@
                 <form action="#" class="afegirPreguntes">
                     <h2>Tipus de pregunta: </h2>
                     <input type="radio" name="tipusPregunta" id="tipusText" value="Text" checked>Text 
-                    <input type="radio" name="tipusPregunta" id="tipusTest" value="Test" class="template">Test
+                    <input type="radio" name="tipusPregunta" id="tipusTest" value="Test">Test
                     <h2>Pregunta: <h2>
                     <input type="text" name="titolPregunta" id="titolPregunta">
                     <div id="preguntaTest" class="template">
