--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -24,10 +24,10 @@
                 <h1>Benvingut al Enquestador</h1>
                 <input type="button" value="Nova enquesta">
             </form>
-            <form action="#" class="getEnquesta">
+            <!--<form action="#" class="getEnquesta">
                 <h1>Get Enquesta</h1>
                 <input type="button" value="Get Enquesta">
-            </form>
+            </form>-->
         </header>
     </div>
     <div id="principal" class="template">    
