--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -26,7 +26,7 @@
         <h1>Generador d'enquestes online</h1>
     </header>
 
-    <div id="content">
+    <div id="content" class="contentContainer">
         <!-- DYNAMIC CONTENT -->
         <section id="sectionContainer">
             <!-- INICI -->
