--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -22,8 +22,10 @@
 
 <body>
     <header>
-        <img src="img/LogoB.png" class="logo">
-        <h1>Generador d'enquestes online</h1>
+        <img src="img/Surveycity2.jpg" class="logo">
+        <div class="titolDescriptor"
+            <h1>Generador d'enquestes online</h1>
+        </div>
     </header>
 
     <div id="content" class="contentContainer">
