Alert crea enquesta

--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -14,7 +14,8 @@
 
      <!-- Per validar formularis -->
     <script type="text/javascript" src="http://jzaefferer.github.com/jquery-validation/jquery.validate.js"></script>
-    <script type="text/javascript" src="scripts/jquery.ui.datepicker.validation.js"></script> 
+    <script type="text/javascript" src="scripts/jquery.ui.datepicker.validation.js"></script>
+    <script type="text/javascript" src="scripts/jquery.alerts.js"></script> 
 
     <script src="scripts/funcions.js"></script>
     <script src="scripts/enquestadorV3.js"></script>
