adaptació per redirigir rec. lògics cap a index.html

--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -3,8 +3,8 @@
 <head>
     <title>Enquestes</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/layout.css">
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" />
     
     
@@ -14,17 +14,17 @@
 
      <!-- Per validar formularis -->
     <script type="text/javascript" src="http://jzaefferer.github.com/jquery-validation/jquery.validate.js"></script>
-    <script type="text/javascript" src="scripts/jquery.ui.datepicker.validation.js"></script>
-    <script type="text/javascript" src="scripts/jquery.alerts.js"></script> 
+    <script type="text/javascript" src="/scripts/jquery.ui.datepicker.validation.js"></script>
+    <script type="text/javascript" src="/scripts/jquery.alerts.js"></script>
 
-    <script src="scripts/funcions.js"></script>
-    <script src="scripts/enquestadorV3.js"></script>
+    <script src="/scripts/funcions.js"></script>
+    <script src="/scripts/enquestadorV3.js"></script>
 </head>
 
 <body>
     <header>
-        <img src="img/Surveycity2.jpg" class="logo">
-        <div class="titolDescriptor"
+        <img src="/img/Surveycity2.jpg" class="logo">
+        <div class="titolDescriptor">
             <h1>Generador d'enquestes online</h1>
         </div>
     </header>
