feta part del client per poder afegir respostes a les preguntes de tipus test

--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -103,17 +103,14 @@
             <div id = "afegirPreguntes" class="template">
                 <form action="#" id="formAfegirPreguntes">
                     <h2>Tipus de pregunta: </h2>
-                    <input type="radio" name="tipusPregunta" id="tipusText" value="Text" checked>Text
-                    <input type="radio" name="tipusPregunta" id="tipusTest" value="Test">Test
+                    <input type="radio" name="tipusPregunta" id="rbTipusText" value="Text" checked>Text
+                    <input type="radio" name="tipusPregunta" id="rbTipusTest" value="Test">Test
                     <h2>Pregunta: </h2>
                         <input type="text" name="titolPregunta" id="titolPregunta">
                         <div id="preguntaTest" class="template">
                             <h2>Respostes: </h2>
-                                1- <input type="text" name="respostaPregunta" id="respostaPregunta1"/> <br>
-                                2- <input type="text" name="respostaPregunta" id="respostaPregunta2"/> <br>
-                                3- <input type="text" name="respostaPregunta" id="respostaPregunta3"/> <br>
-                                4- <input type="text" name="respostaPregunta" id="respostaPregunta4"/>
-                                <input type="button" value="Afegir resposta" id="afegirResposta"/>
+                                <input type="text" name="respostaPregunta" id="respostaPregunta"> <br>
+                                <input type="button" value="Afegir resposta" id="bAfegirResposta">
                         </div>
                         <input type="submit" value="Guardar">
                 </form>
