Validacio test i multirespostes Afegir pregunta

--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -146,8 +146,8 @@
                         <div id="preguntaTest" class="template">                            
                             <h3>Respostes: </h3>
                             <div class="inputdata">
-                                <label for="respostaPregunta">Respostes</label>
-                                <span><input type="text" name="respostaPregunta" id="respostaPregunta" class="required"></span>
+                                <label for="respostaPregunta1">Resposta 1</label>
+                                <span><input type="text" name="respostaPregunta1" id="respostaPregunta1" class="respostaPregunta required"></span>
                             </div>
 
                             <input type="button" id="bAfegirResposta" name="bAfegirResposta" value="Afegir resposta">
