--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -76,7 +76,7 @@
             <!-- VEURE ENQUESTA -->
             <div id = "veureEnquesta" class="template">
                 <form action="#" id="formVeureEnquesta" class="validarFormulari">
-                    <h2>Veure Enquesta: </h2>
+                    <h2>Veure Enquesta</h2>
                     <div class="divFormulari">
                         <div class="inputdata">
                             <label for="titol">Títol</label>
@@ -98,7 +98,7 @@
                             <input type="button"  class="tornar" name="tornar" value="Tornar"/></span>
                         </div>
                     </div>
-                    <h2>Preguntes:</h2>
+                    <h2>Preguntes</h2>
                     <div class="boto">
                         <input type="button" name="afegir" value="Afegir pregunta" id="bAfegirPreguntes"/>
                     </div>
@@ -123,6 +123,7 @@
             <div id = "afegirPreguntes" class="template">
                 <form action="#" id="formAfegirPreguntes" class="validarFormulari">
                     <div class="divFormulari">
+                        <h3>Nova pregunta</h3>
                         <div class="inputdata">
                             <label for="rbTipusText">Text</label>
                             <span><input type="radio" name="tipusPregunta" id="rbTipusText" value="Text" checked></span>
@@ -144,13 +145,16 @@
                         </div>
 
                         <div id="preguntaTest" class="template">                            
-                            <h3>Respostes: </h3>
-                            <div class="inputdata">
-                                <label for="respostaPregunta1">Resposta 1</label>
-                                <span><input type="text" name="respostaPregunta1" id="respostaPregunta1" class="respostaPregunta required"></span>
+                            <h4>Respostes</h4>
+                            <div id="divAfegirResposta">
+                                <div class="inputdata">
+                                    <label for="respostaPregunta1">Resposta 1</label>
+                                    <span><input type="text" name="respostaPregunta1" id="respostaPregunta1" class="respostaPregunta required"></span>
+                                </div>
                             </div>
-
-                            <input type="button" id="bAfegirResposta" name="bAfegirResposta" value="Afegir resposta">
+                            <div id="divAfegirRespostaBoto" class="boto">
+                                <input type="button" id="bAfegirResposta" name="bAfegirResposta" value="Afegir resposta">
+                            </div>
                         </div>
                         <div class="boto">
                             <input type="submit" id="bGuardarResposta" name="bGuardarResposta" value="Guardar">
