Estils portada i logo

--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -23,9 +23,8 @@
 
 <body>
     <header>
-        <img src="/img/Surveycity2.jpg" class="logo">
-        <div class="titolDescriptor">
-            <h1>Generador d'enquestes online</h1>
+        <div class="logo">
+            <img src="/img/Surveycity2.jpg" alt="Generador d'enquestes online" title="Generador d'enquestes online" />
         </div>
     </header>
 
@@ -35,8 +34,10 @@
             <!-- INICI -->
             <div id="inici">
                 <form action="#">
-                    <h1>Benvingut al Enquestador</h1>
-                    <input id="bCrearEnquesta" type="button" value="Crear enquesta">
+                    <h1>Benvingut al generador d'enquestes online</h1>
+                    <div class="boto">
+                        <input id="bCrearEnquesta" type="button" value="Crear enquesta">
+                    </div>
                     <hr/>
                     <!--
                     <h1>Get Enquesta</h1>
