Placeholder del format a les dates

--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -58,12 +58,12 @@
 
                         <div class="inputdata">
 		                  <label for="dataInici">Des de</label>
-		                  <span><input type="text" id="dataInici" name="dataInici" class="from required"/></span>
+		                  <span><input type="text" id="dataInici" name="dataInici" class="from required" placeholder="dd-mm-aaaa" maxlength="10"/></span>
 	                   </div>
 
                         <div class="inputdata">
 		                  <label for="dataFi">Fins a</label>
-		                  <span><input type="text" id="dataFi" name="dataFi" class="to required"/></span>
+		                  <span><input type="text" id="dataFi" name="dataFi" class="to required" placeholder="dd-mm-aaaa" maxlength="10"/></span>
                         </div>
                     
                         <div class="boto">
@@ -80,23 +80,23 @@
                     <h2>Veure Enquesta</h2>
                     <div class="divFormulari">
                         <div class="inputdata">
-                            <label for="titol">Títol</label>
+                            <label for="veureTitol">Títol</label>
                             <span><input type="text" name="titol" id="veureTitol" class="required"></span>
                         </div>
 
                         <div class="inputdata">
-                            <label for="dataInici">Des de</label>
-                            <span><input type="text" id="veureDesM" name="veureDesM" class="from required"/></span>
+                            <label for="veureDesM">Des de</label>
+                            <span><input type="text" id="veureDesM" name="veureDesM" class="from required" placeholder="dd-mm-aaaa" maxlength="10"/></span>
                         </div>
 
                         <div class="inputdata">
-                            <label for="dataFi">Fins a</label>
-                            <span><input type="text" id="veureFinsM" name="veureFinsM" class="to required"/></span>
+                            <label for="veureFinsM">Fins a</label>
+                            <span><input type="text" id="veureFinsM" name="veureFinsM" class="to required" placeholder="dd-mm-aaaa" maxlength="10"/></span>
                         </div>
                     
                         <div class="boto">
                             <input type="submit" value="Modifica">
-                            <input type="button"  class="tornar" name="tornar" value="Tornar"/></span>
+                            <input type="button" class="tornar" name="tornar" value="Tornar"/></span>
                         </div>
                     </div>
                     <h2>Preguntes</h2>
