Estils formulari afegir preguntes

--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -101,7 +101,7 @@
                     </div>
                     <h2>Preguntes</h2>
                     <div class="boto">
-                        <input type="button" name="afegir" value="Afegir pregunta" id="bAfegirPreguntes"/>
+                        <input type="button" id="bAfegirPreguntes" name="bAfegirPreguntes" value="Afegir pregunta" />
                     </div>
                 </form>
             </div>
@@ -160,6 +160,7 @@
                         <div class="boto">
                             <input type="submit" id="bGuardarResposta" name="bGuardarResposta" value="Guardar">
                         </div>
+                        <h3></h3>
                     </div>
                 </form>
             </div>
