Estils formulari afegir preguntes

--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -160,7 +160,7 @@
                         <div class="boto">
                             <input type="submit" id="bGuardarResposta" name="bGuardarResposta" value="Guardar">
                         </div>
-                        <h3></h3>
+                        <div class="separador"></div>
                     </div>
                 </form>
             </div>
