arreglos de disseny

--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -98,7 +98,9 @@
                             <input type="button"  class="tornar" name="tornar" value="Tornar"/></span>
                         </div>
                     </div>
-                    <h2>Preguntes</h2>
+                    <div class="divFormulari" id="divPreguntes">
+                        <h2>Preguntes</h2>
+                    </div>
                     <div class="boto">
                         <input type="button" name="afegir" value="Afegir pregunta" id="bAfegirPreguntes"/>
                     </div>
