--- a/src/main/docroot/index.html
+++ b/src/main/docroot/index.html
@@ -25,6 +25,9 @@
     <header>
         <div class="logo">
             <img src="/img/Surveycity2.jpg" alt="Generador d'enquestes online" title="Generador d'enquestes online" />
+            <div class="titolDescriptor">
+                <h1>Generador d'enquestes online</h1>
+            </div>
         </div>
     </header>
 
